k8s/my-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: my-app
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
  - port: 9000
    nodePort: 31000
    protocol: TCP
    targetPort: 5678
