k8s/nginx.manifest.yaml
# nginx
---
# namespace
kind: Namespace
apiVersion: v1
metadata:
  name: nginx

---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: nginx.192-168-11-21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80

---
# service
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  nginx

---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
      volumes:
      - name: nginx-volume
        configMap:
          name: nginx
